# exchange

./: .clang-format  .clangd  .gitignore  Cargo.toml  Makefile  README.md  flake.nix  sbe.xml  shell.nix
app/: .gitignore  Cargo.toml  Makefile  tailwind.config.js
app/public/: tailwind.css
app/src/: app.rs  main.rs
ende/: Cargo.toml
ende/src/: decode.rs  encode.rs  lib.rs  types.rs
gateway/: Cargo.toml
gateway/examples/: axum.rs  axum_client.rs  tcp.rs
gateway/src/: axum.rs  lib.rs
infra/: docker-compose.yaml  redis-stack.conf  start-docker-compose.sh  start-redis-stack.sh
matcher/: Cargo.toml
matcher/examples/: basic.rs  disruptor_latency.rs  rtrb_latency.rs
matcher/src/: bookmap.rs  lib.rs  main.rs  symbol_table.rs
matcher/src/handler/: broadcast.rs  disruptor.rs  mod.rs  rtrb.rs  stdout.rs
matching-engine/: .gitignore  Makefile  a.out  engine.h  install-deps.sh  main.c  main.cpp  orderbook.h  publisher.h  start-redis-stack.sh  utils.h
matching-engine-old/: .gitignore  Makefile  config.yaml  install-deps.sh
matching-engine-old/include/: config.h  engine.h  evloop.h  orderbook.h  utils.h
matching-engine-old/include/log/: log.h
matching-engine/include/: config.h  engine.h  evloop.h  orderbook.h  publisher.h  utils.h
orderbook/: Cargo.toml  benchmark.c  build.rs  default.nix  main.c  meson.build  raw_benchmark.c
orderbook/.cache/clangd/index/: benchmark.c.BF3AF154F2953A56.idx  event_handler.c.8A98F0C5F12865F7.idx  event_handler.h.EE3843092D3FF92F.idx  limit.c.1D7CDDEC8A8C37BE.idx  limit.h.317CB7A5EA1BDD68.idx  limit_tree.c.6AFB568B4946DA1D.idx  limit_tree.h.E0157A2661E94FAB.idx  limit_tree_test.c.A3E97B9D01EFD676.idx  order_metadata.h.CAD171C96F987313.idx  orderbook.c.448F21FB267D94EA.idx  orderbook.h.69266B663735FDD9.idx  orderbook_message.h.5DA5AEE0B9C0B6B9.idx  orderbook_test.c.96A18650BADF3124.idx  raw_benchmark.c.C2BB542240EBDCEF.idx  ubench.h.764143E236E7FBEA.idx  uint64_hashmap.c.D35AC8FD942A4F0C.idx  uint64_hashmap.h.4DBBA9129100DD53.idx  uint64_hashmap_test.c.C8B8FBC3A753F4B2.idx
orderbook/benches/: bench.rs  raw_bench.rs
orderbook/examples/: event_store.rs
orderbook/include/: event_handler.h  limit.h  limit_tree.h  map_utils.h  order_metadata.h  order_metadata_map.h  orderbook.h  price_limit_map.h  uint64_hashmap.h
orderbook/src/: event_handler.c  lib.rs  limit.c  limit_tree.c  main.rs  map_utils.c  order_metadata_map.c  orderbook.c  price_limit_map.c  uint64_hashmap.c
orderbook/tests/: limit_tree_test.c  order_metadata_map_test.c  orderbook_message.h  orderbook_test.c  price_limit_map_test.c  uint64_hashmap_test.c
publisher/: Cargo.toml  build.rs
publisher/examples/: tcp.rs  uws.rs
publisher/src/: lib.rs  uws.rs
sbe/: Cargo.toml
sbe/src/: lib.rs  message_header_codec.rs  ping_codec.rs  ping_response_codec.rs  server_time_codec.rs  server_time_response_codec.rs  side.rs  trade_codec.rs
