[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matcher = { path = "../matcher" }
sbe = { path = "../sbe" }
ende = { path = "../ende" }

rtrb = "0.3"

# Async
tokio = { version = "1.38", features = ["full"] }
futures = { version = "0.3" }

# Axum
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
