[package]
name = "matcher"
version = "0.1.0"
edition = "2021"

[features]
default = ["random", "rtrb", "disruptor"]
random = ["dep:rand", "orderbook/random"]
rtrb = ["dep:rtrb", "dep:core_affinity"]
disruptor = ["dep:disruptor"]

[dependencies]
orderbook = { path = "../orderbook" }
thiserror = "1.0"
strum = "0.26"
strum_macros = "0.26"
once_cell = "1.19.0"
chrono = "0.4"
rand = { version = "0.8", optional = true }
rtrb = { version = "0.3", optional = true }
disruptor = { version = "2.0", optional = true }
core_affinity = { version = "0.8", optional = true }
